# CakeDivider

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-stl.yml
cake_divider/: __init__.py  cli.py  model.py
scripts/: build.py
tests/: test_parameters.py
